apps/_templates/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
spec:
  ports:
    - port: APP_PORT
      targetPort: http
      name: http
  selector:
    app: APP_NAME
